<resources>
    <string name="app_name">MovementScience</string>
    <string name="open_video_recorder">Record Video</string>
    <string name="record_video">Record Video</string>
    <string name="load_video">Load Video</string>
    <string name="select_points">Select Points</string>
    <string name="select_start_frame">Select start frame</string>
    <string name="select_end_frame">Select end frame</string>
    <string name="track_points">Track Points</string>
    <string name="finished_selecting">Finished Selecting Points</string>
    <string name="lift_tracking">Progress Tracking</string>
    <string name="enter_lifts">Enter Lifts</string>
    <string name="check_progress">Check Progress</string>
    <string name="go_to_pick_points">Pick Points</string>
    <string name="go_to_gait_stability">Monitor Gait Stability</string>
    <string name="start_accelerometer">Start Accel</string>
    <string name="stop_accelerometer">Stop Accel</string>
    <string name="sample_entropy">SEn</string>
    <string name="lyupanov_exponent">LyE</string>
    <string name="tracking">Currently tracking points</string>
    <string name="play_video">Play Video</string>
    <string name="reset_points">Reset Points</string>
    <string name="offline_processing">Offline Processing</string>
    <string name="select_key_frame">Grab Key Frame</string>
    <string name="add_angle">Add Angle</string>
    <string name="add_scribble">Add Scribble</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset_scribble">Reset Scribble</string>
    <string name="manage_files">Manage Files through Google Drive</string>
    <string name="sample_entropy_label">Sample Entropy</string>
    <string name="create_folder_gdrive">Create a New Folder on GDrive</string>
    <string name="upload_image">Upload Picture</string>
    <string name="upload_video">Upload Video</string>
    <string name="track_points_real_time">Track Points Real-Time</string>
    <string name="track_angles_real_time">Track Features Real-Time</string>
    <string name="track_real_time">Real-Time Tracking</string>
    <string name="load_key_frame">Load Key Frame</string>
    <string name="rotate_90">Rotate 90 degrees</string>
    <string name="go_home">Main Menu</string>
    <string name="clear_points">Clear Points</string>
    <string name="load_still_image">Load Image</string>
    <string name="track_angles_offline">Track Angles</string>
    <string name="track_points_offline">Track Points Offline</string>
    <string name="load_from_internet">Load Video from Internet</string>
    <string name="confirm_video_address">Set Address</string>
    <string name="paste_video_address">Paste Video Address</string>
    <string name="settings">Settings</string>
    <string name="pref_rotateDegreesPostProcess">Frame Rotation Angle</string>
    <string-array name="pref_rotateDegreesPostProcess_entries">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>
    <string-array name="pref_rotateDegreesPostProcess_values">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>
    <string name="pref_rotateDegreesPostProcess_default">0</string>
    <string name="pref_rotateDegreesRealTime">Frame Rotation Angle</string>
    <string-array name="pref_rotateDegreesRealTime_entries">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>
    <string-array name="pref_rotateDegreesRealTime_values">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>
    <string name="pref_rotateDegreesRealTime_default">0</string>
    <string name="pref_trailingPointColor">Color - Trailing Points</string>
    <string-array name="pref_trailingPointColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_trailingPointColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_trailingPointColor_default">r</string>
    <string name="pref_currentPointColor">Color - Basic Points</string>
    <string-array name="pref_currentPointColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_currentPointColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_currentPointColor_default">g</string>
    <string name="pref_angleTextColor">Color - Angle Text</string>
    <string-array name="pref_angleTextColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_angleTextColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_angleTextColor_default">c</string>
    <string name="pref_textBoxColor">Color - Text Box</string>
    <string-array name="pref_textBoxColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_textBoxColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_textBoxColor_default">w</string>
    <string name="pref_textBoxTextColor">Color - Text in Text Boxes</string>
    <string-array name="pref_textBoxTextColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_textBoxTextColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_textBoxTextColor_default">b</string>
    <string name="pref_scribbleColor">Color - Scribble Line</string>
    <string-array name="pref_scribbleColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_scribbleColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_scribbleColor_default">y</string>
    <string name="pref_angleLineColor">Color - Angle Lines</string>
    <string-array name="pref_angleLineColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_angleLineColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_angleLineColor_default">y</string>
    <string name="pref_anglePointColor">Color - Angle Points</string>
    <string-array name="pref_anglePointColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_anglePointColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_anglePointColor_default">r</string>
    <string name="pref_linePointColor">Color - Line Points</string>
    <string-array name="pref_linePointColor_entries">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string-array name="pref_linePointColor_values">
        <item>r</item>
        <item>g</item>
        <item>b</item>
        <item>y</item>
        <item>c</item>
        <item>k</item>
        <item>w</item>
    </string-array>
    <string name="pref_linePointColor_default">r</string>
    <string name="pref_lineNoAngleColor">Color - Basic Lines</string>
    <string name="pref_lineNoAngleColor_default">c</string>
    <string name="pref_trailingPointNumber">Number - Trailing Points</string>
    <string name="pref_trailingPointNumber_disp">Number - Trailing Points</string>
    <string name="pref_trailingPointNumber_default">20</string>
    <string name="pref_trailingPointSize">Size - Trailing Points</string>
    <string name="pref_trailingPointSize_disp">Size - Trailing Points</string>
    <string name="pref_trailingPointSize_default">5</string>
    <string name="pref_currentPointSize">Size - Basic Point</string>
    <string name="pref_currentPointSize_disp">Size - Basic Point</string>
    <string name="pref_currentPointSize_default">20</string>
    <string name="pref_angleTextSize">Size - Angle Text</string>
    <string name="pref_angleTextSize_disp">Size - Angle Text</string>
    <string name="pref_angleTextSize_default">2</string>
    <string name="pref_textBoxTextSize">Size - Text Box Characters</string>
    <string name="pref_textBoxTextSize_disp">Size - Text Box Characters</string>
    <string name="pref_textBoxTextSize_default">2</string>
    <string name="pref_scribbleWeight">Weight - Scribble Line</string>
    <string name="pref_scribbleWeight_disp">Weight - Scribble Line</string>
    <string name="pref_scribbleWeight_default">8</string>
    <string name="pref_trackingSearchWindowSize">Search Window</string>
    <string name="pref_trackingSearchWindowSize_disp">Search Window</string>
    <string name="pref_trackingSearchWindowSize_default">20</string>
    <string name="pref_trackingSearchEpsilon">Epsilon</string>
    <string name="pref_trackingSearchEpsilon_disp">Tracking - Epsilon</string>
    <string name="pref_trackingSearchEpsilon_default">0.1</string>
    <string name="pref_trackingSearchMaxLevel">MaxLevel</string>
    <string name="pref_trackingSearchMaxLevel_disp">Tracking - MaxLevel</string>
    <string name="pref_trackingSearchMaxLevel_default">3</string>
    <string name="pref_trackingSearchMinEigenThreshold">MinEigenThreshold</string>
    <string name="pref_trackingSearchMinEigenThreshold_disp">Tracking - MinEigenThreshold</string>
    <string name="pref_trackingSearchMinEigenThreshold_default">0.001</string>
    <string name="pref_postProcessingOrientation">Orientation</string>
    <string name="pref_postProcessingOrientation_default">lr</string>
    <string name="pref_postProcessingSize">Size</string>
    <string name="pref_postProcessingSize_default">small</string>
    <string name="pref_postProcessingPlayOrder">Play Order</string>
    <string name="pref_postProcessingPlayOrder_default">s</string>
</resources>